# codon

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  leptosfmt.toml  rustfmt.toml
dev/psql-compose/: README.md  compose.yml  init.sql  pgadmin_servers.json
end2end/: biom.json  package-lock.json  package.json  playwright.config.js  playwright.config.ts
end2end/tests/: example.spec.js  example.spec.ts
migrations/: 20221118172000_create_todo_table.sql
public/js/: qr_scanner_wrapper.js
public/upload_media/equipment/0-5k/12/log/0-5k/: b48c139d-6fe4-4d45-bcc1-42a69ac340c3.MOV
src/: app.rs  auth.rs  db.rs  error_template.rs  fileserv.rs  lib.rs  macros.rs  main.rs  permission.rs  qrcode.rs  utils.rs
src/app/: app.module.css  app.rs  app_view.rs  mod.rs
src/components/avatar/: avatar.module.css  avatar_view.rs  mod.rs
src/components/button/: button.module.css  button_view.rs  mod.rs
src/components/checkbox/: checkbox_view.rs  mod.rs
src/components/datepicker/: datepicker.module.css  datepicker_view.rs  mod.rs
src/components/dropdown/: dropdown.module.css  dropdown_view.rs  mod.rs
src/components/file_input/: file_input.module.css  file_input_view.rs  mod.rs
src/components/file_upload/: file_upload_view.rs  mod.rs
src/components/img_attachment/: img_attachment.module.css  img_attachment_view.rs  mod.rs
src/components/input/: input.module.css  input_view.rs  mod.rs
src/components/media_upload_form/: media_upload_form_view.rs  mod.rs
src/components/multiline/: mod.rs  multiline.module.css  multiline_view.rs
src/components/pagination/: mod.rs  pagination.module.css  pagination.rs  pagination_view.rs
src/components/qr_scanner/: mod.rs  qr_scanner.module.css  qr_scanner.rs  qr_scanner_view.rs
src/components/radio/: mod.rs  radio_view.rs
src/components/select/: mod.rs  select.module.css  select_view.rs
src/components/switch/: mod.rs  switch_view.rs
src/components/table/: mod.rs  table.rs  table_view.rs
src/components/timezone_offset/: mod.rs  timezone_offset_view.rs
src/ds/: ds.module.css  ds_view.rs  mod.rs
src/equipment/: cell.module.css  cell.rs  cell_view.rs  equipment.module.css  equipment.rs  equipment_detail.rs  equipment_detail_view.rs  equipment_details.module.css  equipment_view.rs  mod.rs  row.rs  row_view.rs  schema.rs  schema_actions.rs  schema_log.rs  schema_notes.rs  schema_people.rs
src/equipment/actions/: actions.module.css  actions_view.rs
src/equipment/cell/: cell.module.css  cell_view.rs
src/equipment/equipment_add/: equipment_add.module.css  equipment_add_view.rs
src/equipment/equipment_detail/: cost_edit_view.rs  equipment_detail_view.rs  equipment_details.module.css  equipment_details_edits.module.css  equipment_details_notes_edits.module.css  equipment_form_toggle_view.rs  location_edit_view.rs  manufacturer_edit_view.rs  name_edit_view.rs  note_edit_view.rs  purchase_date_edit_view.rs  status_edit_view.rs  type_edit_view.rs  vendor_edit_view.rs  warranty_expiration_date_edit_view.rs
src/equipment/heading/: heading.module.css  heading_view.rs
src/equipment/log/: log.module.css  log_view.rs
src/equipment/notes/: notes.module.css  notes_view.rs
src/equipment/notes_form/: mod.rs  notes_form.module.css  notes_form_view.rs
src/equipment/notes_item/: notes_item.module.css  notes_item_view.rs
src/equipment/row/: row.module.css  row_view.rs
src/equipment/thead/: mod.rs  thead.module.css  thead_view.rs
src/footer/: footer.module.css  footer_view.rs  mod.rs
src/header/: header.module.css  header_view.rs  mod.rs
src/home/: home.module.css  home.rs  home_view.rs  mod.rs
src/icons/: culture.rs  culture_view.rs  equipment.rs  equipment_view.rs  experiment.rs  experiment_view.rs  flask.rs  flask_view.rs  icons.module.css  incubation_cabine.rs  incubation_cabinet_view.rs  logo_view.rs  mod.rs  people.rs  people_view.rs  vessel.rs  vessel_view.rs
src/login/: login.module.css  login_view.rs  mod.rs
src/nav/: mod.rs  nav.module.css  nav.rs  nav_view.rs
src/profile/: mod.rs  profile_view.rs
src/samples/: mod.rs  samples.module.css  samples.rs  samples_view.rs
style/: main.css
tests/: lint_server_functions.rs
